--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": "airbnb-typescript",
+  "extends": ["airbnb-typescript"],
   "env": {
     "es2020": true,
     "node": true
@@ -15,7 +15,7 @@
   },
   "settings": {
     "react": {
-      "version": "16"
+      "version": "17"
     }
   },
   "rules": {
